Removed Code Smells and improved coverage